# syspulse

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
server/: database.py  eciso.db  main.py  requirements.txt
server/static/: style.css
server/templates/: dashboard.html  report.html
syspulse/: __main__.py  cli.py  config.py  runner.py
syspulse/checks/: base.py  registry.py
syspulse/checks/windows/: antivirus.py  backup.py  encryption.py  firewall.py  mfa.py  misconfigurations.py  patching.py  privileges.py
syspulse/compliance/: loader.py  mapper.py
syspulse/compliance/frameworks/: cis_windows.json  iso_27001.json  nist_800_53.json
syspulse/engine/: evaluator.py  interaction_matrix.py  rule_loader.py  scorer.py
syspulse/engine/rules/: antivirus.yaml  backup.yaml  encryption.yaml  firewall.yaml  mfa.yaml  misconfigurations.yaml  (+2 more)
syspulse/inventory/: collector.py
syspulse/models/: __init__.py  compliance.py  finding.py  inventory.py  report.py  risk.py
syspulse/output/: html_report.py  json_export.py  terminal.py
syspulse/ps_scripts/: get_av_status.ps1  get_backup_status.ps1  get_bitlocker_status.ps1  get_browser_extensions.ps1  get_firewall_profiles.ps1  get_hardware_info.ps1  get_local_admins.ps1  get_mfa_status.ps1  get_misconfigurations.ps1  get_network_inventory.ps1  get_network_scan.ps1  get_security_agents.ps1  get_software_inventory.ps1  get_update_status.ps1
syspulse/utils/: logging.py  platform_detect.py  subprocess_runner.py
tests/: conftest.py
tests/integration/: test_full_run.py
(+11 files in other folders)
